# reply-cat

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gmail.rs  http.rs  keychain.rs  main.rs  oauth.rs
src/components/: ComposePanel.tsx  ConversationView.tsx  ProgressBar.tsx  SetupWizard.tsx  StatusBar.tsx  ThreadList.tsx  ToneChips.tsx
src/services/: GmailService.ts  OllamaService.ts  Storage.ts  SystemCheck.ts
src/state/: appStore.ts
src/types/: gmail.ts  models.ts
src/utils/: sanitize.ts  shortcuts.ts
