[package]
name = "replycat-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [
    "clipboard",
    "dialog",
    "fs",
    "http-api",
    "notification",
    "os-all",
    "path-all",
    "process",
    "window"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
keyring = "2.0"
tauri-plugin-store = { version = "2.0.0" }
