[package]
name = "replycat-tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
keyring = "2.0"
tauri-plugin-store = { version = "2.0.0" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
sysinfo = "0.29"
rand = "0.8"
urlencoding = "2.1"
sha2 = "0.10"
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
